<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <FrameLayout
        android:background="@drawable/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src = "@android:drawable/ic_menu_revert"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:layout_marginStart="60dp"
            android:textColor="@android:color/white"/>

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@android:color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@android:color/white"
            android:text="@string/about_chat"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textSize="@dimen/text_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src = "@drawable/divider"
        android:padding = "10dp"
        android:background="@android:color/white"/>

        <TextView
            android:id="@+id/exits_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@android:color/white"
            android:textSize="@dimen/text_size"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:layout_marginBottom="25dp"
            android:text="@string/exited"/>


</LinearLayout>