<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.toluene.imitateforwechat.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_navigation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation = "horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffff"
                android:layout_marginStart="10dp"
                android:layout_gravity = "center_vertical"
                android:layout_weight = "3"
                android:text="@string/text_we_chat"/>
            <ImageView
                android:id="@+id/imageView_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src = "@android:drawable/ic_menu_search"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight ="1"
                android:src = "@android:drawable/ic_menu_add"
                android:id="@+id/imageView_add" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_bottom_navigate"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:drawable/bottom_bar">
        <RelativeLayout
            android:id="@+id/news_Layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation = "vertical"
                android:layout_centerVertical="true">
                <ImageView
                    android:id="@+id/news_Image"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src = "@drawable/news_unselected"/>
                <TextView
                    android:id="@+id/news_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/dynamic_Layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/dynamic_Image"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:src = "@drawable/dynamic_unselected"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/dynamic_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/dynamic"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/contact_Layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/contact_Image"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:src="@drawable/contact_unselected"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/contact_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/contact"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id = "@+id/setting_Layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/setting_Image"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:src = "@drawable/setting_unselected"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/setting_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:layout_gravity = "center_horizontal"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
